# lending-plutus

./: .gitignore  Debug.md  Readme.md  build.sh  cabal.project  hie.yaml  lending.cabal
keys/: stake.vkey
plutus/: borrower  borrower.plutus  factory  factory.plutus  lender  lender.plutus  lending.addr  lending.plutus
src/Cerra/Lending/: CLI.hs
src/Cerra/Lending/Contract/Lending/: OnChain.hs  Types.hs
src/Cerra/Lending/NFT/Borrower/: OnChain.hs  Types.hs
src/Cerra/Lending/NFT/Factory/: OnChain.hs  Types.hs
src/Cerra/Lending/NFT/Lender/: OnChain.hs  Types.hs
src/Cerra/Lending/Oracle/Cerra/: OnChain.hs  Types.hs
src/Cerra/Lending/Oracle/Orcfax/: OnChain.hs  Types.hs
src/Cerra/Lending/Utils/: Debug.hs  OnChainUtils.hs  Settings.hs  Utils.hs
tweag-audit-2024/: README.md  build.sh  cabal.project  flake.nix  hie.yaml
tweag-audit-2024/audit/: audit.cabal  package.yaml
tweag-audit-2024/audit/exe/: Main.hs
tweag-audit-2024/audit/src/: Audit.hs
tweag-audit-2024/audit/src/Audit/: Attacks.hs  Endpoints.hs  Traces.hs  Utils.hs
tweag-audit-2024/cerra-lending/: cerra-lending.cabal  package.yaml
tweag-audit-2024/cerra-lending/src/Cerra/Lending/Contract/Lending/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/NFT/Borrower/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/NFT/Factory/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/NFT/Lender/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/Oracle/Cerra/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/Oracle/Orcfax/: OnChain.hs  Types.hs
tweag-audit-2024/cerra-lending/src/Cerra/Lending/Utils/: Debug.hs  OnChainUtils.hs  Settings.hs  Utils.hs
